--- a/qn23 inc/css/style.css
+++ b/qn23 inc/css/style.css
@@ -1,98 +1,58 @@
-*{
-    padding: 0px;
-    margin: 0px;
-}
-
 body{
-    background-color: rgb(102, 153, 0);
-    font-family: "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
+    background-color: #669900;
+    margin:0;
+    padding:0;
 }
 
-.header{
-    background-color: rgb(153, 204, 0);
+.mid-container{
+    margin:12px auto 20px  auto;
+    width:640px;
 }
 
-.mainBody{
-    background-color: white;
+.header-logo{
+    background-color: #99cc00;
+    width:100%;
+    height:80px;
 }
 
-.infinity{
-    font-size: 12px;
-    color: rgb(68 68 68);
+header{
+    border-bottom: 1px solid;
+    border-bottom-style: dotted;
 }
 
-.line{
-    border-bottom: 1px dotted rgb(204 204 204) !important;
+.header-div-one{
+    font-size:14px;
 }
 
-.redStar{
-    color: red;
-}
-
-.pos, .rel, .posOptions, .start, .inp, .res, .salary, .name, .email, .phone, .footerText{
-    font-size: 12px;
-}
-
-.posOptions{
-    width: 200px;
-}
-
-.rel{
-    margin-top: 20px;
-}
-
-.inp input{
-    width: 400px;
-    height: 30px;
-}
-
-.pdf, .salDen{
-    font-size: 11px;
-}
-
-.dollar{
-    width: 100px;
-    height: 30px;
-}
-
-.cents{
-    width: 20px;
-    height: 30px;
-}
-
-.contact{
+.qns-label{
     font-size: 15px;
 }
 
-.firstName{
-    width: 70px;
+.qn1-select{
+    font-size:14px;
 }
 
-.phoneInput{
-    width: 30px;
+.salaryCent{
+    width:20px;
 }
 
-.phoneInput2{
-    width: 40px;
+.salaryDollar{
+    width:9vw;
 }
 
-.formFooter{
-    font-size: 14px;
-    color: rgb(126 126 126);
+.qn5-div{
+    border-bottom: 1px solid;
+    border-bottom-style: dotted;
 }
 
-.formFooter a{
-    color: rgb(0 127 170);
+.fname{
+    width:6vw;
 }
 
-.footer{
-    color: rgb(96 96 96);
+.lname{
+    width:10vw;
 }
 
-.footerHeading{
-    font-size: 10px;
-}
-
-.footerText{
-    margin-bottom: 60px;
+.userEmail{
+    width:20vw;
 }
